[gd_scene load_steps=3 format=2]

[ext_resource path="res://scenes/user-interface/room-navigation/room-navigation.gd" type="Script" id=1]
[ext_resource path="res://assets/map/map.png" type="Texture" id=2]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -1024.0
margin_bottom = -600.0
script = ExtResource( 1 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="UI" type="Control" parent="CanvasLayer"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/UI"]
anchor_left = 1.0
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -76.0
margin_top = -40.0
custom_constants/margin_right = 20
custom_constants/margin_top = 0
custom_constants/margin_left = 0
custom_constants/margin_bottom = 20

[node name="ButtonOpenRoomsMenu" type="Button" parent="CanvasLayer/UI/MarginContainer"]
margin_right = 56.0
margin_bottom = 20.0
size_flags_horizontal = 0
size_flags_vertical = 0
text = "Rooms"
align = 0

[node name="RoomsMenu" type="Control" parent="CanvasLayer"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/RoomsMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/RoomsMenu/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 1004.0
margin_bottom = 580.0
color = Color( 0.654902, 0.4, 0.831373, 0.894118 )

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -492.0
margin_top = -280.0
margin_right = 492.0
margin_bottom = 280.0
custom_constants/margin_right = 20
custom_constants/margin_top = 20
custom_constants/margin_left = 20
custom_constants/margin_bottom = 20

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 964.0
margin_bottom = 540.0

[node name="TextureRect" type="TextureRect" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/CenterContainer"]
margin_left = 222.0
margin_top = 10.0
margin_right = 722.0
margin_bottom = 510.0
rect_min_size = Vector2( 500, 500 )
texture = ExtResource( 2 )
expand = true
stretch_mode = 5

[node name="RoomSelectMenuBody" type="VBoxContainer" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer"]
margin_left = 20.0
margin_top = 20.0
margin_right = 964.0
margin_bottom = 540.0

[node name="SpacerStart" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody"]
margin_right = 944.0
margin_bottom = 80.0
rect_min_size = Vector2( 300, 80 )

[node name="SecondFloorSelect" type="HBoxContainer" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody"]
margin_top = 84.0
margin_right = 944.0
margin_bottom = 104.0
alignment = 2

[node name="ButtonHorseBedroomMenuDisabled" type="Button" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/SecondFloorSelect"]
margin_left = 258.0
margin_right = 381.0
margin_bottom = 20.0
disabled = true
text = "Horse's Bedroom"

[node name="ButtonWashroomMenuDisabled" type="Button" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/SecondFloorSelect"]
margin_left = 385.0
margin_right = 466.0
margin_bottom = 20.0
disabled = true
text = "Washroom"

[node name="Spacer2" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/SecondFloorSelect"]
margin_left = 470.0
margin_right = 500.0
margin_bottom = 20.0
rect_min_size = Vector2( 30, 0 )

[node name="ButtonStudyMenu" type="Button" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/SecondFloorSelect" groups=["Rooms"]]
margin_left = 504.0
margin_right = 551.0
margin_bottom = 20.0
text = "Study"

[node name="Spacer3" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/SecondFloorSelect"]
margin_left = 555.0
margin_right = 595.0
margin_bottom = 20.0
rect_min_size = Vector2( 40, 0 )

[node name="Label2" type="Label" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/SecondFloorSelect"]
margin_left = 599.0
margin_top = 3.0
margin_right = 650.0
margin_bottom = 17.0
text = "Window"

[node name="Spacer" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/SecondFloorSelect"]
margin_left = 654.0
margin_right = 804.0
margin_bottom = 20.0
rect_min_size = Vector2( 150, 0 )

[node name="Label" type="Label" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/SecondFloorSelect"]
margin_left = 808.0
margin_top = 3.0
margin_right = 890.0
margin_bottom = 17.0
text = "Second Floor"

[node name="SecondFloorEndSpacer" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/SecondFloorSelect"]
margin_left = 894.0
margin_right = 944.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )

[node name="Spacer21" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody"]
margin_top = 108.0
margin_right = 944.0
margin_bottom = 228.0
rect_min_size = Vector2( 300, 120 )

[node name="FirstFloorSelect" type="HBoxContainer" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody"]
margin_top = 232.0
margin_right = 944.0
margin_bottom = 252.0
alignment = 2

[node name="ButtonFoyerMenu" type="Button" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect"]
margin_left = 342.0
margin_right = 389.0
margin_bottom = 20.0
disabled = true
text = "Foyer"

[node name="Spacer3" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect"]
margin_left = 393.0
margin_right = 463.0
margin_bottom = 20.0
rect_min_size = Vector2( 70, 0 )
rect_pivot_offset = Vector2( -1035, -163 )

[node name="ButtonKitchenMenu" type="Button" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect" groups=["Rooms"]]
margin_left = 467.0
margin_right = 527.0
margin_bottom = 20.0
text = "Kitchen"

[node name="Spacer2" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect"]
margin_left = 531.0
margin_right = 556.0
margin_bottom = 20.0
rect_min_size = Vector2( 25, 0 )
rect_pivot_offset = Vector2( -1035, -163 )

[node name="ButtonGardenMenu" type="Button" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect" groups=["Rooms"]]
margin_left = 560.0
margin_right = 618.0
margin_bottom = 20.0
text = "Garden"

[node name="Spacer" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect"]
margin_left = 622.0
margin_right = 822.0
margin_bottom = 20.0
rect_min_size = Vector2( 200, 0 )

[node name="Label" type="Label" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect"]
margin_left = 826.0
margin_top = 3.0
margin_right = 890.0
margin_bottom = 17.0
text = "First Floor"

[node name="FirstFloorEndSpacer" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect"]
margin_left = 894.0
margin_right = 944.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )

[node name="Spacer22" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody"]
margin_top = 256.0
margin_right = 944.0
margin_bottom = 326.0
rect_min_size = Vector2( 300, 70 )

[node name="FirstFloorSelect2" type="HBoxContainer" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody"]
margin_top = 330.0
margin_right = 944.0
margin_bottom = 350.0
alignment = 2

[node name="ButtonLivingRoomMenu" type="Button" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect2" groups=["Rooms"]]
margin_left = 310.0
margin_right = 400.0
margin_bottom = 20.0
text = "Living Room"

[node name="Spacer" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect2"]
margin_left = 404.0
margin_right = 944.0
margin_bottom = 20.0
rect_min_size = Vector2( 540, 0 )

[node name="Spacer1Basement" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody"]
margin_top = 354.0
margin_right = 944.0
margin_bottom = 379.0
rect_min_size = Vector2( 300, 25 )

[node name="BasementSelect" type="HBoxContainer" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody"]
margin_top = 383.0
margin_right = 944.0
margin_bottom = 403.0
alignment = 2

[node name="ButtonCellarMenu" type="Button" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/BasementSelect" groups=["Rooms"]]
margin_left = 439.0
margin_right = 487.0
margin_bottom = 20.0
text = "Cellar"

[node name="Spacer" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/BasementSelect"]
margin_left = 491.0
margin_right = 821.0
margin_bottom = 20.0
rect_min_size = Vector2( 330, 0 )

[node name="Label" type="Label" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/BasementSelect"]
margin_left = 825.0
margin_top = 3.0
margin_right = 890.0
margin_bottom = 17.0
text = "Basement"

[node name="BasementEndSpacer" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/BasementSelect"]
margin_left = 894.0
margin_right = 944.0
margin_bottom = 20.0
rect_min_size = Vector2( 50, 0 )

[node name="SpacerEnd" type="Control" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody"]
margin_top = 407.0
margin_right = 944.0
margin_bottom = 487.0
rect_min_size = Vector2( 300, 80 )

[node name="RoomsMenuActions" type="HBoxContainer" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody"]
margin_top = 491.0
margin_right = 944.0
margin_bottom = 511.0
alignment = 2

[node name="ButtonCloseRoomsMenu" type="Button" parent="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/RoomsMenuActions"]
margin_left = 857.0
margin_right = 944.0
margin_bottom = 20.0
text = "Close Menu"

[connection signal="pressed" from="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/SecondFloorSelect/ButtonStudyMenu" to="." method="_on_ButtonStudyMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect/ButtonFoyerMenu" to="." method="_on_ButtonFoyerMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect/ButtonKitchenMenu" to="." method="_on_ButtonKitchenMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect/ButtonGardenMenu" to="." method="_on_ButtonGardenMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/FirstFloorSelect2/ButtonLivingRoomMenu" to="." method="_on_ButtonLivingRoomMenu_pressed"]
[connection signal="pressed" from="CanvasLayer/RoomsMenu/MarginContainer/ColorRect/MarginContainer/RoomSelectMenuBody/BasementSelect/ButtonCellarMenu" to="." method="_on_ButtonCellarMenu_pressed"]
